<resources>
    <string name="app_name">Path Finder</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Next">next</string>
    <string name="favourite">Favourite</string>
    <string name="title_activity_activity_favourite">Favourite</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lankahomes_frag_title">Lankahomes.lk</string>
    <string name="title_activity_houses">Houses</string>
    <string name="addNew">Add New</string>
    <string name="title_activity_add_new_location">Add New Location</string>
    <string name="search">Search Now</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="sign_in">Sign in</string>
    <string name="or">OR</string>
    <string name="password">Enter Password</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">+14155552671</string>
    <string name="city">City or State</string>


    <string-array name="tabs">
        <item>TAB 1</item>
        <item>TAB 2</item>
        <item>TAB 3</item>
    </string-array>


    <string-array name="spinner_place_type">
        <item> ATM </item>
        <item> Bank </item>
        <item> Bar </item>
        <item> Beauty Saloon </item>
        <item> Book Store </item>
        <item> Buddhist Temple </item>
        <item> Bus Station </item>
        <item> Cafe </item>
        <item> Church </item>
        <item> clothing Store </item>
        <item> Departmental Store </item>
        <item> Electronic Store </item>
        <item> Fitness Center </item>
        <item> Florist </item>
        <item> Gas Station </item>
        <item> Hindu Temples </item>
        <item> Hospitals </item>
        <item> Hotels </item>
        <item> Library </item>
        <item> liquor Store </item>
        <item> Mosque </item>
        <item> Movie Theatre </item>
        <item> Museum </item>
        <item> Night Club </item>
        <item> Park </item>
        <item> Pharmacy </item>
        <item> Police Station </item>
        <item> Post Office </item>
        <item> Restaurant </item>
        <item> School </item>
        <item> Shopping Mall </item>
        <item> Spa </item>
        <item> University </item>
        <item> Zoo </item>
    </string-array>

    <string-array name="Distance_Radius">
        <item> 1 KM </item>
        <item> 2 KM </item>
        <item> 3 KM </item>
        <item> 4 KM </item>
        <item> 5 KM </item>
        <item> 6 KM </item>
        <item> 7 KM </item>
        <item> 8 KM </item>
        <item> 9 KM </item>
        <item> 10 KM </item>
        <item> 11 KM </item>
        <item> 12 KM </item>
        <item> 13 KM </item>
        <item> 14 KM </item>
        <item> 15 KM </item>
        <item> 16 KM </item>
        <item> 17 KM </item>
        <item> 18 KM </item>
        <item> 19 KM </item>
        <item> 20 KM </item>
        <item> 21 KM </item>
        <item> 22 KM </item>
        <item> 23 KM </item>
        <item> 24 KM </item>
        <item> 25 KM </item>
        <item> 26 KM </item>
        <item> 27 KM </item>
        <item> 28 KM </item>
        <item> 29 KM </item>
        <item> 30 KM </item>
        <item> 31 KM </item>
        <item> 32 KM </item>
        <item> 33 KM </item>
        <item> 34 KM </item>
        <item> 35 KM </item>
        <item> 36 KM </item>
        <item> 37 KM </item>
        <item> 38 KM </item>
        <item> 39 KM </item>
        <item> 40 KM </item>
        <item> 41 KM </item>
        <item> 42 KM </item>
        <item> 43 KM </item>
        <item> 44 KM </item>
        <item> 45 KM </item>
        <item> 46 KM </item>
        <item> 47 KM </item>
        <item> 48 KM </item>
        <item> 49 KM </item>
        <item> 50 KM </item>
        <item> 51 KM </item>
        <item> 52 KM </item>
        <item> 53 KM </item>
        <item> 54 KM </item>
        <item> 55 KM </item>
        <item> 56 KM </item>
        <item> 57 KM </item>
        <item> 58 KM </item>
        <item> 59 KM </item>
        <item> 60 KM </item>
        <item> 61 KM </item>
        <item> 62 KM </item>
        <item> 63 KM </item>
        <item> 64 KM </item>
        <item> 65 KM </item>
        <item> 66 KM </item>
        <item> 67 KM </item>
        <item> 68 KM </item>
        <item> 69 KM </item>
        <item> 70 KM </item>
        <item> 71 KM </item>
        <item> 72 KM </item>
        <item> 73 KM </item>
        <item> 74 KM </item>
        <item> 75 KM </item>
        <item> 76 KM </item>
        <item> 77 KM </item>
        <item> 78 KM </item>
        <item> 79 KM </item>
        <item> 80 KM </item>
        <item> 81 KM </item>
        <item> 82 KM </item>
        <item> 83 KM </item>
        <item> 84 KM </item>
        <item> 85 KM </item>
        <item> 86 KM </item>
        <item> 87 KM </item>
        <item> 88 KM </item>
        <item> 89 KM </item>
        <item> 90 KM </item>
        <item> 91 KM </item>
        <item> 92 KM </item>
        <item> 93 KM </item>
        <item> 94 KM </item>
        <item> 95 KM </item>
        <item> 96 KM </item>
        <item> 97 KM </item>
        <item> 98 KM </item>
        <item> 99 KM </item>
        <item> 100 KM </item>
    </string-array>

    <string-array name="country_list">
        <item> Afghanistan </item>
        <item> Albania </item>
        <item> Algeria </item>
        <item> Andorra </item>
        <item> Angola </item>
        <item> Antigua and Barbuda </item>
        <item> Argentina </item>
        <item> Armenia </item>
        <item> Australia </item>
        <item> Austria </item>
        <item> Azerbaijan </item>
        <item> Bahamas </item>
        <item> Bahrain </item>
        <item> Bangladesh </item>
        <item> Barbados </item>
        <item> Belarus </item>
        <item> Belgium </item>
        <item> Belize </item>
        <item> Benin </item>
        <item> Bhutan </item>
        <item> Bolivia </item>
        <item> Bosnia and Herzegovina </item>
        <item> Botswana </item>
        <item> Brazil </item>
        <item> Brunei </item>
        <item> Bulgaria </item>
        <item> Burkina Faso </item>
        <item> Burma/Myanmar </item>
        <item> Burundi </item>
        <item> Cambodia </item>
        <item> Cameroon </item>
        <item> Canada </item>
        <item> Cape Verde </item>
        <item> Central African Republic </item>
        <item> Chad </item>
        <item> Chile </item>
        <item> China </item>
        <item> Colombia </item>
        <item> Comoros </item>
        <item> Congo </item>
        <item> Congo, Democratic Republic of </item>
        <item> Costa Rica </item>
        <item> Cote d Ivoire Ivory Coast </item>
        <item> Croatia </item>
        <item> Cuba </item>
        <item> Cyprus </item>
        <item> Czech Republic </item>
        <item> Denmark </item>
        <item> Djibouti </item>
        <item> Dominica </item>
        <item> Dominican Republic </item>
        <item> East Timor </item>
        <item> Ecuador </item>
        <item> Egypt </item>
        <item> El Salvador </item>
        <item> Equatorial Guinea </item>
        <item> Eritrea </item>
        <item> Estonia </item>
        <item> Ethiopia </item>
        <item> Fiji </item>
        <item> Finland </item>
        <item> France </item>
        <item> Gabon </item>
        <item> Gambia </item>
        <item> Georgia </item>
        <item> Germany </item>
        <item> Ghana </item>
        <item> Greece </item>
        <item> Grenada </item>
        <item> Guatemala </item>
        <item> Guinea </item>
        <item> Guinea-Bissau </item>
        <item> Guyana </item>
        <item> Haiti </item>
        <item> Honduras </item>
        <item> Hungary </item>
        <item> Iceland </item>
        <item> India </item>
        <item> Indonesia </item>
        <item> Iran </item>
        <item> Iraq </item>
        <item> Ireland </item>
        <item> Israel </item>
        <item> Italy </item>
        <item> Jamaica </item>
        <item> Japan </item>
        <item> Jordan </item>
        <item> Kazakhstan </item>
        <item> Kenya </item>
        <item> Kiribati </item>
        <item> Korea, North </item>
        <item> Korea, South </item>
        <item> Kuwait </item>
        <item> Kyrgyzstan </item>
        <item> Laos </item>
        <item> Latvia </item>
        <item> Lebanon </item>
        <item> Lesotho </item>
        <item> Liberia </item>
        <item> Libya </item>
        <item> Liechtenstein </item>
        <item> Lithuania </item>
        <item> Luxembourg </item>
        <item> Macedonia </item>
        <item> Madagascar </item>
        <item> Malawi </item>
        <item> Malaysia </item>
        <item> Maldives </item>
        <item> Mali </item>
        <item> Malta </item>
        <item> Marshall Islands </item>
        <item> Mauritania </item>
        <item> Mauritius </item>
        <item> Mexico </item>
        <item> Micronesia </item>
        <item> Moldova </item>
        <item> Monaco </item>
        <item> Mongolia </item>
        <item> Montenegro </item>
        <item> Morocco </item>
        <item> Mozambique </item>
        <item> Namibia </item>
        <item> Nauru </item>
        <item> Nepal </item>
        <item> Netherlands </item>
        <item> New Zealand </item>
        <item> Nicaragua </item>
        <item> Niger </item>
        <item> Nigeria </item>
        <item> Norway </item>
        <item> Oman </item>
        <item> Pakistan </item>
        <item> Palau </item>
        <item> Panama </item>
        <item> Papua New Guinea </item>
        <item> Paraguay </item>
        <item> Peru </item>
        <item> Philippines </item>
        <item> Poland </item>
        <item> Portugal </item>
        <item> Qatar </item>
        <item> Romania </item>
        <item> Russian Federation </item>
        <item> Rwanda </item>
        <item> Saint Kitts and Nevis </item>
        <item> Saint Lucia </item>
        <item> Saint Vincent and the Grenadines </item>
        <item> Samoa </item>
        <item> San Marino </item>
        <item> Sao Tome and Principe </item>
        <item> Saudi Arabia </item>
        <item> Senegal </item>
        <item> Serbia </item>
        <item> Seychelles </item>
        <item> Sierra Leone </item>
        <item> Singapore </item>
        <item> Slovakia </item>
        <item> Slovenia </item>
        <item> Solomon Islands </item>
        <item> Somalia </item>
        <item> South Africa </item>
        <item> South Sudan </item>
        <item> Spain </item>
        <item> Sri Lanka </item>
        <item> Sudan </item>
        <item> Suriname </item>
        <item> Swaziland </item>
        <item> Sweden </item>
        <item> Switzerland </item>
        <item> Syria </item>
        <item> Tajikistan </item>
        <item> Tanzania </item>
        <item> Thailand </item>
        <item> Togo </item>
        <item> Tonga </item>
        <item> Trinidad and Tobago </item>
        <item> Tunisia </item>
        <item> Turkey </item>
        <item> Turkmenistan </item>
        <item> Tuvalu </item>
        <item> Uganda </item>
        <item> Ukraine </item>
        <item> United Arab Emirates </item>
        <item> United Kingdom </item>
        <item> United States </item>
        <item> Uruguay </item>
        <item> Uzbekistan </item>
        <item> Vanuatu </item>
        <item> Vatican City </item>
        <item> Venezuela </item>
        <item> Vietnam </item>
        <item> Yemen </item>
        <item> Zambia </item>
        <item> Zimbabwe </item>
    </string-array>
    <string name="title_activity_select_coordinates">Map</string>


</resources>
