<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">




    <item
        android:id="@+id/addNewLocation"
        android:orderInCategory="100"
        android:title="@string/addNew"
        android:icon="@drawable/add_new"
        app:showAsAction="always">

    </item>

    <item
        android:id="@+id/favorite"
        android:orderInCategory="100"
        android:title="@string/favourite"
        android:icon="@drawable/favorite_icon"
        app:showAsAction="always">
        
    </item>



    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="always"
        android:orderInCategory="100"
        />

</menu>
