<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignIn"
    android:background="@color/primaryColor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView5"
        android:textColor="@color/white"
        android:textSize="45dp"
        android:textStyle="bold"
        android:layout_below="@+id/iv_logowhite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/iv_logowhite"
        android:src="@drawable/location_white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="64dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_top_corner"
        android:id="@+id/et_login_email"
        android:hint="Enter email address"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="15dp"
        android:layout_marginTop="10dp"
        android:textSize="18dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:hint="Enter password"
        android:background="@drawable/edit_text_top_corner"
        android:ems="0"
        android:id="@+id/et_login_password"
        android:layout_below="@+id/et_login_email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="15dp"
        android:layout_marginTop="10dp"
        android:textSize="18dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/sign_in"
        android:id="@+id/btn_signin"
        android:layout_below="@+id/et_login_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:onClick="sign_in"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/or"
        android:id="@+id/textView6"
        android:layout_below="@+id/btn_signin"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="Signup"
        android:id="@+id/btn_signup"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:onClick="sign_up"/>

</RelativeLayout>
</ScrollView>